Added provision to add design

--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -12,32 +12,12 @@
 
 <div class="left-menu">
     <div class="logo"><i class="fa fa-align-justify"/>
-        <div>DMS system</div>
+        <div>DDMS system</div>
     </div>
     <div class="accordion">
         <div class="section">
-            <input type="radio" name="accordion-1" id="section-1"/>
-            <label for="section-1"><h:link id="orders" value="Create order" outcome="order.xhtml"/></label>
-        </div>
-        <div class="section">
             <input type="radio" name="accordion-1" id="section-2" value="toggle"/>
             <label for="section-2"> <span><h:link id="design" value="Garment details" outcome="design.xhtml"/></span></label>
-        </div>
-        <div class="section">
-            <input type="radio" name="accordion-1" id="section-3" value="toggle"/>
-            <label for="section-3"> <span><h:link id="delivered" value="Delivered" outcome="delivered.xhtml"/></span></label>
-        </div>
-
-        <div class="section">
-            <input type="radio" name="accordion-1" id="section-4" value="toggle"/>
-            <label for="section-3"> <span><h:link id="payment" value="Payment" outcome="paid.xhtml"/></span></label>
-        </div>
-
-
-        <div class="section">
-            <div id="section-5">
-                <label for="section-5"> <span>Version 1.0</span></label>
-            </div>
         </div>
     </div>
 </div>
